crates/ir/tests/snapshots/lower_test__functions__conditionals.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module functions__conditionals

declare eq: (Dict, g, g) -> Bool
declare println: (m) -> Unit

fn main() -> Unit =
  let_join v6(v4: ~String) =
    let v5: Unit = call println(v4)
    v5
  in
  let_join v3(v2: Bool) =
    switch v2 {
      1 ->
        jump v6("yes")
      _ ->
        jump v6("no")
    }
  in
  let v0: Dict = get_dict Eq[Int]
  let v1: Bool = call eq(v0, 1, 1)
  jump v3(v1)
