crates/ir/tests/snapshots/lower_test__functions__deep_stack.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module functions__deep_stack

extern java "krypton.runtime.KryptonIO" println(Object): Unit
extern java "krypton.runtime.KryptonArray" staticLength(Object): Int
extern java "krypton.runtime.KryptonArray" staticGet(Object, Int): Object
extern java "krypton.runtime.KryptonArray" staticNew(Int): Object
extern java "krypton.runtime.KryptonArray" staticSet(Object, Int, Object): Unit
extern java "krypton.runtime.KryptonArray" staticFreeze(Object): Object
extern java "krypton.runtime.KryptonArray" staticLength(Object): Int
extern java "krypton.runtime.KryptonArray" staticGet(Object, Int): Object
extern java "krypton.runtime.KryptonArray" staticNew(Int): Object
extern java "krypton.runtime.KryptonArray" staticSet(Object, Int, Object): Unit
extern java "krypton.runtime.KryptonArray" staticFreeze(Object): Object
extern java "krypton.runtime.KryptonMap" staticEmpty(): Object
extern java "krypton.runtime.KryptonMap" staticPut(Object, Object, Object, Object, Object): Object
extern java "krypton.runtime.KryptonMap" staticGetUnsafe(Object, Object): Object
extern java "krypton.runtime.KryptonMap" staticContainsKey(Object, Object): Bool
extern java "krypton.runtime.KryptonMap" staticDelete(Object, Object): Object
extern java "krypton.runtime.KryptonMap" staticKeys(Object): Object
extern java "krypton.runtime.KryptonMap" staticValues(Object): Object
extern java "krypton.runtime.KryptonMap" staticEntries(Object): Object
extern java "krypton.runtime.KryptonMap" staticSize(Object): Int
extern java "krypton.runtime.KryptonMap" staticMerge(Object, Object): Object
extern java "krypton.runtime.KryptonArray" staticLength(Object): Int
extern java "krypton.runtime.KryptonArray" staticGet(Object, Int): Object
extern java "krypton.runtime.KryptonMap" staticEmpty(): Object
extern java "krypton.runtime.KryptonMap" staticPut(Object, Object, Object, Object, Object): Object
extern java "krypton.runtime.KryptonMap" staticGetUnsafe(Object, Object): Object
extern java "krypton.runtime.KryptonMap" staticContainsKey(Object, Object): Bool
extern java "krypton.runtime.KryptonMap" staticDelete(Object, Object): Object
extern java "krypton.runtime.KryptonMap" staticKeys(Object): Object
extern java "krypton.runtime.KryptonMap" staticValues(Object): Object
extern java "krypton.runtime.KryptonMap" staticEntries(Object): Object
extern java "krypton.runtime.KryptonMap" staticSize(Object): Int
extern java "krypton.runtime.KryptonMap" staticMerge(Object, Object): Object
extern java "krypton.runtime.KryptonArray" staticLength(Object): Int
extern java "krypton.runtime.KryptonArray" staticGet(Object, Int): Object
extern java "krypton.runtime.KryptonArray" staticLength(Object): Int
extern java "krypton.runtime.KryptonArray" staticGet(Object, Int): Object
extern java "krypton.runtime.KryptonArray" staticNew(Int): Object
extern java "krypton.runtime.KryptonArray" staticSet(Object, Int, Object): Unit
extern java "krypton.runtime.KryptonArray" staticFreeze(Object): Object
extern java "krypton.runtime.KryptonArray" staticLength(Object): Int
extern java "krypton.runtime.KryptonArray" staticGet(Object, Int): Object
extern java "krypton.runtime.KryptonArray" staticNew(Int): Object
extern java "krypton.runtime.KryptonArray" staticSet(Object, Int, Object): Unit
extern java "krypton.runtime.KryptonArray" staticFreeze(Object): Object
extern java "krypton.runtime.KryptonIO" raw_println(Object): Unit
extern java "krypton.runtime.KryptonIO" raw_print(Object): Unit
extern java "krypton.runtime.KryptonIO" readLine(): String
extern java "krypton.runtime.KryptonIO" read_file(String): Result[String, String]
extern java "krypton.runtime.KryptonIO" write_file(String, String): Result[String, Unit]
extern java "krypton.runtime.KryptonIO" raw_println(Object): Unit
extern java "krypton.runtime.KryptonIO" raw_print(Object): Unit
extern java "krypton.runtime.KryptonIO" readLine(): String
extern java "krypton.runtime.KryptonIO" read_file(String): Result[String, String]
extern java "krypton.runtime.KryptonIO" write_file(String, String): Result[String, Unit]
extern type java "krypton.runtime.KryptonArray" Vec
extern type java "krypton.runtime.KryptonMap" Map
extern type java "krypton.runtime.KryptonMap" Map
extern type java "krypton.runtime.KryptonArray" Vec
import core/eq/eq as eq(g, g): Bool
import core/ord/lt as lt(h, h): Bool
import core/semigroup/combine as combine(g, g): g
import core/sub/sub as sub(g, g): g
import core/mul/mul as mul(g, g): g
import core/div/div as div(g, g): g
import core/neg/neg as neg(g): g
import core/show/show as show(g): String
import core/hash/hash as hash(g): Int
import core/resource/close as close(~g): Unit
import core/peek/peek as peek(h): h
import core/list/last as last(List[t3]): Option[t3]
import core/list/sort_by as sort_by(List[y5], (y5) -> n5): List[y5]
import core/list/filter as filter(List[i1], (i1) -> Bool): List[i1]
import core/list/fold as fold(List[v1], x1, (x1, v1) -> x1): x1
import core/list/map as map(List[x], (x) -> z): List[z]
import core/vec/to_list as to_list(Vec[j7]): List[j7]
import core/io/println as println(m): Unit
import core/option/Some as Some(e): Option[e]
import core/option/None as None(): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/list/Nil as Nil(): List[h]
import core/ordering/LT as LT(): Ordering
import core/ordering/EQ as EQ(): Ordering
import core/ordering/GT as GT(): Ordering
declare println: (m) -> Unit

fn main() -> Unit =
  let_join v62(v0: ~Int) =
    let v1: Int = add_int(v0, 1)
    let v2: Int = add_int(v1, 1)
    let v3: Int = add_int(v2, 1)
    let v4: Int = add_int(v3, 1)
    let v5: Int = add_int(v4, 1)
    let v6: Int = add_int(v5, 1)
    let v7: Int = add_int(v6, 1)
    let v8: Int = add_int(v7, 1)
    let v9: Int = add_int(v8, 1)
    let v10: Int = add_int(v9, 1)
    let v11: Int = add_int(v10, 1)
    let v12: Int = add_int(v11, 1)
    let v13: Int = add_int(v12, 1)
    let v14: Int = add_int(v13, 1)
    let v15: Int = add_int(v14, 1)
    let v16: Int = add_int(v15, 1)
    let v17: Int = add_int(v16, 1)
    let v18: Int = add_int(v17, 1)
    let v19: Int = add_int(v18, 1)
    let v20: Int = add_int(v19, 1)
    let v21: Int = add_int(v20, 1)
    let v22: Int = add_int(v21, 1)
    let v23: Int = add_int(v22, 1)
    let v24: Int = add_int(v23, 1)
    let v25: Int = add_int(v24, 1)
    let v26: Int = add_int(v25, 1)
    let v27: Int = add_int(v26, 1)
    let v28: Int = add_int(v27, 1)
    let v29: Int = add_int(v28, 1)
    let v30: Int = add_int(v29, 1)
    let v31: Int = add_int(v30, 1)
    let v32: Int = add_int(v31, 1)
    let v33: Int = add_int(v32, 1)
    let v34: Int = add_int(v33, 1)
    let v35: Int = add_int(v34, 1)
    let v36: Int = add_int(v35, 1)
    let v37: Int = add_int(v36, 1)
    let v38: Int = add_int(v37, 1)
    let v39: Int = add_int(v38, 1)
    let v40: Int = add_int(v39, 1)
    let v41: Int = add_int(v40, 1)
    let v42: Int = add_int(v41, 1)
    let v43: Int = add_int(v42, 1)
    let v44: Int = add_int(v43, 1)
    let v45: Int = add_int(v44, 1)
    let v46: Int = add_int(v45, 1)
    let v47: Int = add_int(v46, 1)
    let v48: Int = add_int(v47, 1)
    let v49: Int = add_int(v48, 1)
    let v50: Int = add_int(v49, 1)
    let v51: Int = add_int(v50, 1)
    let v52: Int = add_int(v51, 1)
    let v53: Int = add_int(v52, 1)
    let v54: Int = add_int(v53, 1)
    let v55: Int = add_int(v54, 1)
    let v56: Int = add_int(v55, 1)
    let v57: Int = add_int(v56, 1)
    let v58: Int = add_int(v57, 1)
    let v59: Int = add_int(v58, 1)
    let v60: Int = add_int(v59, 1)
    let v61: Unit = call println(v60)
    v61
  in
  jump v62(0)
