crates/ir/tests/snapshots/lower_test__functions__fibonacci.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module functions__fibonacci

import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(k) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
declare println: (k) -> Unit

fn fibonacci(v0: Int) -> Int =
  let_join v10(v4: Bool) =
    if v4 {
      v0
    } else {
      let v5: Int = sub_int(v0, 1)
      let v6: Int = call fibonacci(v5)
      let v7: Int = sub_int(v0, 2)
      let v8: Int = call fibonacci(v7)
      let v9: Int = add_int(v6, v8)
      v9
    }
  in
  let v1: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
  let v2: Bool = trait_call core/ord.Ord.lt(v1, 1, v0)
  let v3: Bool = not(v2)
  jump v10(v3)

fn main() -> Unit =
  let v12: Int = call fibonacci(10)
  let v11: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v13: Unit = call println(v11, v12)
  v13
