crates/ir/tests/snapshots/lower_test__functions__recur_countdown.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module functions__recur_countdown

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/option/None as None(): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/list/Nil as Nil(): List[h]
import core/ordering/LT as LT(): Ordering
import core/ordering/EQ as EQ(): Ordering
import core/ordering/GT as GT(): Ordering
declare println: (o) -> Unit

fn countdown(v0: Int) -> Int =
  let_join [recur] v1(v2: Int) =
    let_join v7(v5: Bool) =
      if v5 {
        0
      } else {
        let v6: Int = sub_int(v2, 1)
        jump v1(v6)
      }
    in
    let v3: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
    let v4: Bool = trait_call core/eq.Eq.eq(v3, v2, 0)
    jump v7(v4)
  in
  jump v1(v0)

fn main() -> Unit =
  let v9: Int = call countdown(10)
  let v8: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v10: Unit = call println(v8, v9)
  v10
