crates/ir/tests/snapshots/lower_test__functions__recur_in_lambda.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module functions__recur_in_lambda

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[y8]): List[y8]
import core/io/println as println(s): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
declare println: (s) -> Unit

fn main() -> Unit =
  let v0: (Int) -> Int = make_closure(lambda$26, [])
  let v10: Int = call_closure v0(3)
  let v9: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v11: Unit = call println(v9, v10)
  v11

fn lambda$26(v1: Int) -> Int =
  let_join [recur] v2(v3: Int) =
    let_join v8(v6: Bool) =
      if v6 {
        0
      } else {
        let v7: Int = sub_int(v3, 1)
        jump v2(v7)
      }
    in
    let v4: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
    let v5: Bool = trait_call core/eq.Eq.eq(v4, v3, 0)
    jump v8(v5)
  in
  jump v2(v1)
